--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "swagger-editor-dist": "^3.16.3",
+    "swagger-ui-dist": "^3.50.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.26.0",
